fix gap

--- a/resources/css/comic.css
+++ b/resources/css/comic.css
@@ -108,7 +108,7 @@
     display: flex;
     flex-direction: column;
 
-    gap: 8px;
+    gap: 16px;
 }
 
 .user-analyse-wrapper {
